<resources>
    <string name="app_name">BitCoinWallet</string>
    <string name="title_personal_wallet">Personal wallet</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_receive">Receive</string>
    <string name="title_send">Send</string>
    <string name="title_bitcoin_wallet">Bitcoin wallet</string>
    <string name="title_add_wallet">Add wallet</string>
    <string name="title_log_out">Log out</string>
    <string name="close_drawer">Close drawer</string>
    <string name="open_drawer">Open drawer</string>
    <string name="title_transaction_group">Transaction</string>
    <string name="title_wallet_group">Bitcoin Wallet</string>
    <string name="title_qr_code">qr code</string>
    <string name="waiting_title">Waiting ...</string>
    <string name="back_title">Back</string>
    <string name="forgot_title">Forgot Password</string>
    <string name="action_login">Login</string>
    <string name="action_send_mail">Send Now</string>
    <string name="email_title">Email</string>
    <string name="password_new_title">New PassWord</string>
    <string name="password_confirm_title">Confirm PassWord</string>
    <string name="confirm_title">Confirm</string>
    <string name="code_verify_title">Code Verify</string>
    <string name="retry_title">Retry</string>
    <string name="not_received_mail_title">Do not received our mail ?</string>
    <string name="email_invalid">Email invalid !</string>
    <string name="retry_verify_request">Please retry after </string>
    <string name="failed_verify_request">Error when requesting!</string>
    <string name="success_verify_request">The code has been sent to your email</string>
    <string name="bitcoin_address_title">Bitcoin Address</string>
    <string name="amount_title">Amount</string>
    <string name="note_title">Note</string>
    <string name="send_instruct_title">If you want to send some money, Please fill up the followings:</string>
    <string name="available_balance__title">Current balance</string>
    <string name="title_sign_in_now">Sign In Now </string>
    <string name="title_intro_login">Embarrassing hidden in the middle of text .All the
        lorem ipsum generator on the internet tend to
        repeat predefined chunks </string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_forgot_pass">Forgot Password ?</string>
    <string name="title_not_member">Not a Member Yet ?</string>
    <string name="text_register">Register</string>
    <string name="error_message">Error when load data !</string>
    <string name="invalid_coin_address">Coin adress invalid!</string>
    <string name="invalid_send_amount">Amount invalid !</string>
    <string name="dialog_send_title">Send coint </string>
    <string name="dialog_send_message">Are you sure you want to transfer money to this address?</string>
    <string name="send_coin_successed">Send successed</string>
    <string name="send_coin_failed">Send failed</string>
    <string name="action_request_amount">Request Custom Amount</string>
    <string name="genrerate_address">Generate a new address</string>
    <string name="request_title">Request</string>
    <string name="enter_amount_title">Enter Your Amount</string>
    <string name="wallet_title">Instant transactions with low fees</string>
    <string name="bitcoin_cash_title">Current Bitcoin Cash (BCH)</string>
    <string name="other_wallet_title">Your other wallet</string>
    <string name="ok_title">Ok</string>
    <string name="cancel_title">Cancel</string>
    <string name="wallet_name_exist_title">Wallet name is existed!</string>
    <string name="enter_wallet_name_title">Enter Your New Wallet Name</string>
    <string name="title_register_now">Register Now</string>
    <string name="title_already_member">Already a Member</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_hint_full_name">Full Name</string>
    <string name="text_hint_confirm_password">Confirm Password</string>
    <string name="text_hint_phone">Phone Number</string>
    <string name="text_hint_country">Country</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="err_pass_is_null_blank">Password cant be blank </string>
    <string name="err_pass_not_match">Password does not match the confirm password.</string>
    <string name="login_failed_title">Email or password incorrect!</string>
    <string name="action_change_wallet">Change wallet</string>
    <string name="action_share_wallet">Share wallet</string>
    <string name="btc_reward_title">BTC Reward</string>
    <string name="crypto_prices_title">Crypto Prices</string>
    <string name="crypto_charts_title">Crypto Charts</string>
    <string name="account_title">Account</string>
    <string name="change_passwd_title">Change PassWord</string>
    <string name="action_confirm">Confirm</string>
    <string name="change_passwd_successed">Change password successed</string>
    <string name="change_passwd_failed">Change password failed</string>
    <string name="invalid_email_passwd">Email or password incorrect</string>
    <string name="activity_title">Activity</string>
    <string name="received_title">Received</string>
    <string name="sended_title">Sended</string>
    <string name="btc_title">BTC</string>
    <string name="no_send_transac_title">No Send Transaction</string>
    <string name="no_receive_transac_title">No Receive Transaction</string>
    <string name="copy_qr_successed_title">QrCode is copied!</string>D
</resources>
