<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/bg_custom_edit_text"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_custom_edit_text"
            android:gravity="center"
            android:text="@string/title_sign_in_now"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_intro"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_80"
        android:background="@drawable/bg_custom_edit_text"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/dp_5"
        android:text="@string/title_intro_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />

    <com.framgia.bitcoinwallet.util.ui.EditTextCustom
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:inputType="textEmailAddress"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_80"
        app:layout_constraintTop_toBottomOf="@id/tv_intro"
        app:setImage="@drawable/ic_account"
        app:textHint="@string/text_hint_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="" />

    <com.framgia.bitcoinwallet.util.ui.EditTextCustom
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_20"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:setImage="@drawable/ic_account"
        app:textHint="@string/text_hint_password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/bg_custom_edit_text"
        android:text="@string/title_sign_in"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <TextView
        android:id="@+id/tv_forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/title_forgot_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="@dimen/dp_25"
        android:text="@string/title_not_member"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgotPass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:text="@string/text_register"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgotPass" />

</android.support.constraint.ConstraintLayout>