<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screen.MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="0dp"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/color_deep_purple_50_500"
            android:elevation="@dimen/dp_4"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/title_personal_wallet"
            app:titleTextColor="@android:color/white" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_main"
            android:layout_width="0dp"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/color_deep_purple_50_500"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextAppearance="@style/TextAppearance.AppCompat.Inverse"
            app:tabTextColor="#BDBDBD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="@dimen/dp_4"
            app:tabMode="fixed"
            app:tabIndicatorColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/toolbar_main">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_receive" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_transaction" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_send" />
        </android.support.design.widget.TabLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_drawer"
        app:menu="@menu/menu_drawer" />
</android.support.v4.widget.DrawerLayout>
