<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.framgia.bitcoinwallet.ui.screen.forgotpasswd.ForgotPassWdViewModel" />

        <import type="android.view.View" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <View
            android:id="@+id/view_forgot_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_100"
            android:background="@drawable/shape_status_bar"
            android:elevation="@dimen/dp_30"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:elevation="@dimen/dp_30"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/dp_30"
            android:text="@string/forgot_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/view_forgot_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_forgot_container" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:inputType="textEmailAddress"
            android:background="@drawable/shape_edit_text"
            android:drawableRight="@drawable/ic_message"
            android:hint="@string/email_title"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8"
            android:paddingTop="@dimen/dp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view_forgot_container" />

        <Button
            android:id="@+id/button_send_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/color_deep_purple_50_500"
            android:text="@string/action_send_mail"
            android:textColor="@android:color/white"
            android:visibility="@{viewModel.visibleCodeInputUi ?View.GONE :View.VISIBLE}"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

        <TextView
            android:id="@+id/text_not_have_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/not_received_mail_title"
            android:textStyle="italic"
            android:visibility="@{viewModel.visibleCodeInputUi ?View.VISIBLE :View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

        <TextView
            android:id="@+id/text_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/retry_title"
            android:textColor="@android:color/holo_blue_dark"
            android:visibility="@{viewModel.visibleCodeInputUi ?View.VISIBLE :View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_not_have_code" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/color_deep_purple_50_500"
            android:text="@string/action_login"
            android:textColor="@android:color/white"
            android:visibility="@{viewModel.visibleCodeInputUi ?View.VISIBLE :View.GONE}"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    </android.support.constraint.ConstraintLayout>
</layout>
