<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.framgia.bitcoinwallet.ui.screen.signup.SignUpViewModel" />

        <variable
            name="listener"
            type="com.framgia.bitcoinwallet.ui.screen.signup.SignUpActionListener" />

        <variable
            name="user"
            type="com.framgia.bitcoinwallet.data.model.User" />
    </data>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="0dp"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@drawable/bg_custom_edit_text"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_custom_edit_text"
                    android:gravity="center"
                    android:text="@string/title_register_now"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20" />
            </android.support.v7.widget.Toolbar>

            <TextView
                android:id="@+id/tv_intro"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_80"
                android:background="@drawable/bg_custom_edit_text"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/dp_5"
                android:text="@string/title_intro_login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_main" />

            <com.framgia.bitcoinwallet.util.ui.EditTextCustom
                android:id="@+id/edt_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_25"
                android:inputType="text"
                android:paddingLeft="@dimen/dp_25"
                android:paddingRight="@dimen/dp_25"
                android:text="@{viewModel.user.fullName}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_intro"
                app:setImage="@drawable/ic_account"
                app:textHint="@string/text_hint_full_name" />

            <com.framgia.bitcoinwallet.util.ui.EditTextCustom
                android:id="@+id/edt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_25"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/dp_25"
                android:paddingRight="@dimen/dp_25"
                android:text="@{viewModel.user.email}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_full_name"
                app:setImage="@drawable/ic_account"
                app:textHint="@string/text_hint_email" />

            <com.framgia.bitcoinwallet.util.ui.EditTextCustom
                android:id="@+id/edt_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_25"
                android:inputType="textVisiblePassword"
                android:paddingLeft="@dimen/dp_25"
                android:paddingRight="@dimen/dp_25"
                android:text="@{viewModel.user.password}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_email"
                app:setImage="@drawable/ic_account"
                app:textHint="@string/text_hint_password" />

            <com.framgia.bitcoinwallet.util.ui.EditTextCustom
                android:id="@+id/edt_confirm_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_25"
                android:inputType="textVisiblePassword"
                android:paddingLeft="@dimen/dp_25"
                android:paddingRight="@dimen/dp_25"
                android:text="@{viewModel.rePassword}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_pass"
                app:setImage="@drawable/ic_account"
                app:textHint="@string/text_hint_confirm_password" />

            <com.framgia.bitcoinwallet.util.ui.EditTextCustom
                android:id="@+id/edt_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_25"
                android:inputType="phone"
                android:paddingLeft="@dimen/dp_25"
                android:paddingRight="@dimen/dp_25"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_confirm_pass"
                app:setImage="@drawable/ic_account"
                app:textHint="@string/text_hint_phone" />

            <com.framgia.bitcoinwallet.util.ui.EditTextCustom
                android:id="@+id/edt_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_25"
                android:inputType="text"
                android:paddingLeft="@dimen/dp_25"
                android:paddingRight="@dimen/dp_25"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_phone"
                app:setImage="@drawable/ic_account"
                app:textHint="@string/text_hint_country" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginRight="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/bg_custom_edit_text"
                android:clickable="@{!viewModel.loading}"
                android:onClick="@{(view)-> listener.clickRegister(view)}"
                android:text="@string/title_sign_up"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_country" />

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_50"
                android:layout_marginLeft="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_50"
                android:text="@string/title_already_member"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_sign_in"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_50"
                android:layout_marginRight="@dimen/dp_120"
                android:layout_marginTop="@dimen/dp_25"
                android:onClick="@{(view)-> listener.clickSigIn()}"
                android:text="@string/text_sign_in"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/text_view"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
